k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordle
  namespace: wordle
  labels:
    app: wordle
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: wordle
