k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordle
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - wordle.melloy.life
      secretName: wordle-tls
  rules:
    - host: wordle.melloy.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordle
                port:
                  number: 80
